[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/ingame_menu/ingame_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/ubuntu/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/menu_button/menu_button.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.486275, 0.501961, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.054902, 0.2, 0.254902, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="ingame_menu" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
margin_left = 312.0
margin_top = 160.0
margin_right = 712.0
margin_bottom = 440.0
rect_min_size = Vector2( 400, 280 )
custom_styles/panel = SubResource( 1 )

[node name="margin_container" type="MarginContainer" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_container" type="VBoxContainer" parent="panel/margin_container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 270.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_label" type="Label" parent="panel/margin_container/vbox_container"]
margin_right = 380.0
margin_bottom = 140.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="restart_button" parent="panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 150.0
margin_right = 380.0
margin_bottom = 200.0
text = "Empezar de nuevo"

[node name="return_to_main_menu_button" parent="panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 210.0
margin_right = 380.0
margin_bottom = 260.0
text = "Volver al men√∫ principal"
[connection signal="pressed" from="panel/margin_container/vbox_container/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="panel/margin_container/vbox_container/return_to_main_menu_button" to="." method="_on_return_to_main_menu_button_pressed"]
